--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
     <h1>Example title</h1>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/example.html"></include>
+    <include src="./partials/example.html"></include>
   </body>
 </html>
