--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <include src="./partials/example.html"></include>
     <include src="./partials/example.html"></include>
     <include src="./partials/example.html"></include>
+    <include src="./partials/example.html"></include>
   </body>
 </html>
