--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,23 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h1>Example title</h1>
+    <h1>Homework</h1>
+
+    <body>
+    <ul>
+      <li><a href="./html/task-01.html">Task 1</a></li>
+      <li><a href="./html/task-02.html">Task 2</a></li>
+      <li><a href="./html/task-03.html">Task 3</a></li>
+      <li><a href="./html/task-04.html">Task 4</a></li>
+      <li><a href="./html/task-05.html">Task 5</a></li>
+      <li><a href="./html/task-06.html">Task 6</a></li>
+      <li><a href="./html/task-07.html">Task 7</a></li>
+      <li><a href="./html/task-08.html">Task 8</a></li>
+      <li><a href="./html/task-09.html">Task 9</a></li>
+      <li><a href="./html/task-10.html">Task 10</a></li> 
+    </ul>
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example.html"></include>
-  </body>
+    <!-- <include src="./partials/example.html"></include>
+  </body> -->
 </html>
