Adds start files to HW # 7

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <h1>Homework</h1>
 
     <body>
+      <h2>lesson 6</h2>
     <ul>
       <li><a href="./html/task-01.html">Task 1</a></li>
       <li><a href="./html/task-02.html">Task 2</a></li>
@@ -23,6 +24,10 @@
       <li><a href="./html/task-09.html">Task 9</a></li>
       <li><a href="./html/task-10.html">Task 10</a></li> 
     </ul>
+    <h2>lesson 7</h2>
+   <ul> <li><a href="./html-7-lessons/task-01.html">Task 1</a></li>
+    <li><a href="./html-7-lessons/task-02.html">Task 2</a></li></ul>
+
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include>
