--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,18 @@
     <h2>lesson 7</h2>
    <ul> <li><a href="./html-7-lessons/task-01.html">Task 1</a></li>
     <li><a href="./html-7-lessons/task-02.html">Task 2</a></li></ul>
+    <h2>lesson 9</h2>
+    <ul>
+      <li><a href="./html-9-lesson/01-color-switcher.html">Color switcher</a></li>
+      <li><a href="./html-9-lesson/02-timer.html">Countdown timer</a></li>
+      <li><a href="./html-9-lesson/03-promises.html">Promise generator</a></li>
+    </ul>
+
+    <h2>Lesson 10</h2>
+    <ul>
+      <li><a href="./html-10-lesson/http.html">HTTP</a></li>
+     
+    </ul>
 
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
